# openapi/src/openapi_server/apis/default_api.py
@@ -23,8 +23,8 @@ from fastapi import (  # noqa: F401
 )
 
 from openapi_server.models.extra_models import TokenModel  # noqa: F401
-from openapi_server.models.dynamic_pricing_post200_response import DynamicPricingPost200Response
-from openapi_server.models.dynamic_pricing_post_request import DynamicPricingPostRequest
+from openapi_server.models.discount_request import DiscountRequest
+from openapi_server.models.dynamic_pricing_response import DynamicPricingResponse
 from openapi_server.security_api import get_token_ApiKeyAuth
 
 router = APIRouter()
@@ -37,18 +37,18 @@ for _, name, _ in pkgutil.iter_modules(ns_pkg.__path__, ns_pkg.__name__ + "."):
 @router.post(
     "/dynamicPricing",
     responses={
-        200: {"model": DynamicPricingPost200Response, "description": "Successfully calculated dynamic prices"},
+        200: {"model": DynamicPricingResponse, "description": "Successful response"},
     },
     tags=["default"],
     summary="Gets the price details",
     response_model_by_alias=True,
 )
 async def dynamic_pricing_post(
-    dynamic_pricing_post_request: DynamicPricingPostRequest = Body(None, description=""),
+    discount_request: DiscountRequest = Body(None, description=""),
     token_ApiKeyAuth: TokenModel = Security(
         get_token_ApiKeyAuth
     ),
-) -> DynamicPricingPost200Response:
+) -> DynamicPricingResponse:
     if not BaseDefaultApi.subclasses:
         raise HTTPException(status_code=500, detail="Not implemented")
-    return await BaseDefaultApi.subclasses[0]().dynamic_pricing_post(dynamic_pricing_post_request)
+    return await BaseDefaultApi.subclasses[0]().dynamic_pricing_post(discount_request)
